    - Decreased the damage of dungeon turrets.
    - Increased the minimum distance that dungeons can be from the center hex by 1 hex tile.
    - Lowered the default frequency of dungeon generation for each planet.  (Can be configured in the mod settings.)
  Bugfixes:
    - Fixed that dungeons invisibly occupied some hexes just outside of themselves, preventing you from claiming them.
---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 21/11/25
  Major Features:
    - Added item buffs to most items, unlocked and upgraded in the Catalog.
        Unlocking and enhancement difficulty is configurable with two new settings, "Item Buff Cost Scale" and "Item Buff Cost Base".
    - Added command /set-item-value so that you can get modded items to show up in random trades, the catalog, and be able to use them in /add-trade.
        Also added complementary commands: /import-item-values /export-item-values /remove-item-value /get-item-value
    - Added Fulgora quest to unlock free roboports ("Hexports") built into hex cores that require no power.
  Features:
    - Added command /regenerate-trades so that you can regenerate the trades in your current hexes with newly loaded item values for mods.
        Don't forget about /add-trade and /remove-trade for maximum control of a new playthrough!
    - Added command parameter aliases: in-hand, here
        in-hand: This parameter takes the value of whatever item you're holding.
        here: This parameter takes the value of whatever planet your character is currently on.
        Useful for when setting values for modded items but you don't know what the hyphenated names are:
        /set-item-value in-hand 100 here
  Minor Features:
    - Added two mod settings, "Default Trade Quality" and "Increment Trade Quality", to control how trade quality bounds are initialized or managed.